--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel='stylesheet' href='css/index.css'>
-  <script src='../src/tsubu.js'></script>
+  <script src='./tsubu.js'></script>
 </head>
 <body>
   <section id='landing'>
